# protobuf_study

./: .gitignore  CMakeLists.txt  Readme.md  binding.gyp  package.json  tsconfig.json
addone/: proto_interface.cc
cpp_demo/: CMakeLists.txt  main.cc
proto_file/: action.proto  data.proto  enum_test.proto  image.proto  test.proto
src/: enum_test.cc  firstDemo.ts  first_demo.cc  protoDemo.ts
